--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0OVByQln2cetV8WQlkiBKf?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+<iframe id="spotifyPlayer" style="border-radius:12px" src="https://open.spotify.com/embed/track/0OVByQln2cetV8WQlkiBKf?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
+<label for="volumeControl">Громкость:</label>
+<input type="range" id="volumeControl" min="0" max="1" step="0.01" value="1">
+
+<script>
+  const context = new AudioContext();
+  const gainNode = context.createGain();
+
+  const audio = new Audio();
+
+  document.getElementById('volumeControl').addEventListener('input', (e) => {
+    gainNode.gain.value = e.target.value;
+  });
+</script>
