--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
-<iframe id="spotifyPlayer" style="border-radius:12px" src="https://open.spotify.com/embed/track/0OVByQln2cetV8WQlkiBKf?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+<div style="position: relative; width: 100%; max-width: 400px;">
+  <iframe style="border-radius:12px; width:100%; height:152px;" 
+          src="https://open.spotify.com/embed/track/0OVByQln2cetV8WQlkiBKf?utm_source=generator&theme=0" 
+          frameborder="0" allowfullscreen="" 
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
+  </iframe>
 
-<label for="volumeControl">Громкость:</label>
-<input type="range" id="volumeControl" min="0" max="1" step="0.01" value="1">
-
-<script>
-  const context = new AudioContext();
-  const gainNode = context.createGain();
-
-  const audio = new Audio();
-
-  document.getElementById('volumeControl').addEventListener('input', (e) => {
-    gainNode.gain.value = e.target.value;
-  });
-</script>
+  <!-- Ползунок громкости поверх iframe -->
+  <input type="range" min="0" max="100" value="100" 
+         style="position: absolute; bottom: 10px; left: 10px; right: 10px; opacity: 0.8;">
+</div>
