--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-<div style="position: relative; width: 100%; max-width: 400px;">
-  <iframe style="border-radius:12px; width:100%; height:152px;" 
-          src="https://open.spotify.com/embed/track/0OVByQln2cetV8WQlkiBKf?utm_source=generator&theme=0" 
-          frameborder="0" allowfullscreen="" 
-          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
-  </iframe>
-
-  <!-- Ползунок громкости поверх iframe -->
-  <input type="range" min="0" max="100" value="100" 
-         style="position: absolute; bottom: 10px; left: 10px; right: 10px; opacity: 0.8;">
-</div>
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/4wXXDPexLwBHwIpRQg1kb8?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
